// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`traverse-up > can traverse up to pick the config file from ./a 1`] = `
---------- Context -----------
Working Directory: /ROOT/test/__fixtures__/traverse-up/a
Command: /ROOT/nadle.mjs --max-workers 1 --no-footer hello
---------- Stdout ------------
[log] <Bold><Cyan>🛠️ Welcome to Nadle {version}!</Cyan></BoldDim>
[log] Using Nadle from /ROOT/lib/index.js
[log] Loaded configuration from /ROOT/test/__fixtures__/traverse-up/nadle.config.ts

[log] <Yellow>></Yellow> Task <Bold>hello</BoldDim> <Yellow>STARTED</Yellow>

Hello from /ROOT/test/__fixtures__/traverse-up/a
[log]
<Green>✓</Green> Task <Bold>hello</BoldDim> <Green>DONE</Green> <Dim>{duration}</BoldDim>
[log]
<Bold><Green>RUN SUCCESSFUL</Green></BoldDim> in <Bold>{duration}</BoldDim>
[log] <Bold>1</BoldDim> task executed
`;

exports[`traverse-up > can traverse up to pick the config file from ./a/a1 1`] = `
---------- Context -----------
Working Directory: /ROOT/test/__fixtures__/traverse-up/a/a1
Command: /ROOT/nadle.mjs --max-workers 1 --no-footer hello
---------- Stdout ------------
[log] <Bold><Cyan>🛠️ Welcome to Nadle {version}!</Cyan></BoldDim>
[log] Using Nadle from /ROOT/lib/index.js
[log] Loaded configuration from /ROOT/test/__fixtures__/traverse-up/nadle.config.ts

[log] <Yellow>></Yellow> Task <Bold>hello</BoldDim> <Yellow>STARTED</Yellow>

Hello from /ROOT/test/__fixtures__/traverse-up/a/a1
[log]
<Green>✓</Green> Task <Bold>hello</BoldDim> <Green>DONE</Green> <Dim>{duration}</BoldDim>
[log]
<Bold><Green>RUN SUCCESSFUL</Green></BoldDim> in <Bold>{duration}</BoldDim>
[log] <Bold>1</BoldDim> task executed
`;

exports[`traverse-up > can traverse up to pick the config file from ./a/a1/a11/a112 1`] = `
---------- Context -----------
Working Directory: /ROOT/test/__fixtures__/traverse-up/a/a1/a11/a112
Command: /ROOT/nadle.mjs --max-workers 1 --no-footer hello
---------- Stdout ------------
[log] <Bold><Cyan>🛠️ Welcome to Nadle {version}!</Cyan></BoldDim>
[log] Using Nadle from /ROOT/lib/index.js
[log] Loaded configuration from /ROOT/test/__fixtures__/traverse-up/nadle.config.ts

[log] <Yellow>></Yellow> Task <Bold>hello</BoldDim> <Yellow>STARTED</Yellow>

Hello from /ROOT/test/__fixtures__/traverse-up/a/a1/a11/a112
[log]
<Green>✓</Green> Task <Bold>hello</BoldDim> <Green>DONE</Green> <Dim>{duration}</BoldDim>
[log]
<Bold><Green>RUN SUCCESSFUL</Green></BoldDim> in <Bold>{duration}</BoldDim>
[log] <Bold>1</BoldDim> task executed
`;

exports[`traverse-up > can traverse up to pick the config file from ./a/a1/a12 1`] = `
---------- Context -----------
Working Directory: /ROOT/test/__fixtures__/traverse-up/a/a1/a12
Command: /ROOT/nadle.mjs --max-workers 1 --no-footer hello
---------- Stdout ------------
[log] <Bold><Cyan>🛠️ Welcome to Nadle {version}!</Cyan></BoldDim>
[log] Using Nadle from /ROOT/lib/index.js
[log] Loaded configuration from /ROOT/test/__fixtures__/traverse-up/nadle.config.ts

[log] <Yellow>></Yellow> Task <Bold>hello</BoldDim> <Yellow>STARTED</Yellow>

Hello from /ROOT/test/__fixtures__/traverse-up/a/a1/a12
[log]
<Green>✓</Green> Task <Bold>hello</BoldDim> <Green>DONE</Green> <Dim>{duration}</BoldDim>
[log]
<Bold><Green>RUN SUCCESSFUL</Green></BoldDim> in <Bold>{duration}</BoldDim>
[log] <Bold>1</BoldDim> task executed
`;
